Revision history for Dist-Zilla-Plugin-CheckExtraTests

{{$NEXT}}

0.028     2015-08-10 10:52:35-04:00 America/New_York

    [Fixed]

    - non-perl files in xt/* are not executed

0.027     2015-05-02 15:41:56-04:00 America/New_York

    [Documented]

    - Changed order of 'xt' commands in help text for clarity

0.026     2015-03-24 23:35:49-04:00 America/New_York

    [Fixed]

    - Fixed test corpuses (corpii?) to protect against META validation
      errors

0.025     2014-11-21 11:29:50-05:00 America/New_York

    [Changed]

    - Respects dzil verbose flag

0.024     2014-11-04 05:30:13-05:00 America/New_York

    [Added]

    - RunExtraTests now also runs miscellaneous xt/ tests

0.023     2014-10-30 16:25:03-04:00 America/New_York

    [Changed]

    - Removed unused Moose::Autobox

0.022     2014-07-14 17:36:05-04:00 America/New_York

    - [RunExtraTests] now accepts the --jobs flag passed to 'dzil test' and
      'dzil release'

0.021     2014-03-25 14:34:02-04:00 America/New_York

    [Fixed]

    - specifies Path::Tiny prerequisite of 0.013 or better

0.020     2014-03-22 23:12:58-04:00 America/New_York

    [Fixed]

    - default jobs support was buggy in the last version

0.019     2014-03-22 22:48:04-04:00 America/New_York

    [Changed]

    - Added 'jobs' argument for 'dzil xtest' for parallel testing

    - passing new 'default_jobs' option (added to Dist::Zilla 5.014) through
      to test runner for parallel testing

0.018     2014-02-18 17:20:58-05:00 America/New_York

    [Fixed]

    - CheckExtraTest now force removes temp directory, the way
      Path::Class used to do.

0.017     2014-02-13 15:03:55-05:00 America/New_York

    [Changed]

    - Removed dependency on Path::Class in favor of Path::Tiny

0.016     2013-11-15 11:33:06 America/New_York

    [Changed]

    - the 'xtest' command now accepts the same options as 'test' does

0.015     2013-10-31 15:03:13 America/New_York

    - Shipping as a stable release
